favoicon changes and logo changes to remove white space

--- a/css/theme.css
+++ b/css/theme.css
@@ -211,7 +211,7 @@ frame{
 	transition:all 300ms
 }
 .btn-primary:hover,.btn-primary:focus{
-	background:#ffd700;
+	background:#1a147296;
 	color:#fff
 }
 .btn-primary-1{
