--- a/css/responsive.css
+++ b/css/responsive.css
@@ -187,10 +187,10 @@
 }
 .slider .container{
 	margin-left:0;
-	left:0
+	left:0;
 }
 .slider-welcome{
-	font-size:25px
+	font-size:25px;
 }
 .slider-title{
 	font-size:37px
